force-app/main/default/objects/BOM_SubComponent__c/BOM_SubComponent__c.object-meta.xml
<CustomObject>
    <label>BOM Sub Component</label>
    <nameField>
        <displayFormat>SUB-{00000}</displayFormat>
        <label>BOM Sub Component No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM Sub Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>