force-app/main/default/objects/BOM_SubComponent__c/fields/Alternative_Part__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Part__c</fullName>
    <label>代替品番</label>
    <length>50</length>
    <type>Text</type>
</CustomField>