force-app/main/default/objects/BOM_SubComponent__c/fields/BOM_Line__c.field-meta.xml
<CustomField>
    <fullName>BOM_Line__c</fullName>
    <label>BOM Line</label>
    <referenceTo>BOM_Line__c</referenceTo>
    <relationshipLabel>BOM Sub Components</relationshipLabel>
    <relationshipName>BOM_SubComponents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>