force-app/main/default/objects/BOM_SubComponent__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>コンポーネント名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>