force-app/main/default/objects/BOM_SubComponent__c/fields/Component_Product__c.field-meta.xml
<CustomField>
    <fullName>Component_Product__c</fullName>
    <label>使用製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>BOM Sub Components (使用製品)</relationshipLabel>
    <relationshipName>BOM_SubComponents_Component</relationshipName>
    <type>Lookup</type>
</CustomField>