force-app/main/default/objects/BOM_SubComponent__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>素材種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>金属</fullName><default>false</default><label>金属</label></value>
            <value><fullName>樹脂</fullName><default>false</default><label>樹脂</label></value>
            <value><fullName>電子部品</fullName><default>false</default><label>電子部品</label></value>
            <value><fullName>ゴム</fullName><default>false</default><label>ゴム</label></value>
            <value><fullName>その他</fullName><default>false</default><label>その他</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>