force-app/main/default/objects/BOM_SubComponent__c/fields/Part_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Part_Total_Cost__c</fullName>
    <label>部品原価合計</label>
    <summarizedField>BOM_Part__c.Extended_Cost__c</summarizedField>
    <summaryForeignKey>BOM_Part__c.BOM_SubComponent__c</summaryForeignKey>
    <summaryOperation>SUM</summaryOperation>
    <type>Summary</type>
</CustomField>