force-app/main/default/objects/BOM_SubComponent__c/fields/Required_For_Production__c.field-meta.xml
<CustomField>
    <fullName>Required_For_Production__c</fullName>
    <defaultValue>true</defaultValue>
    <label>製造必須</label>
    <type>Checkbox</type>
</CustomField>