force-app/main/default/objects/BOM_SubComponent__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>工程順序</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>