force-app/main/default/objects/BOM_SubComponent__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>仕様・規格</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>