force-app/main/default/objects/BOM_SubComponent__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>個</fullName><default>true</default><label>個</label></value>
            <value><fullName>kg</fullName><default>false</default><label>kg</label></value>
            <value><fullName>m</fullName><default>false</default><label>m</label></value>
            <value><fullName>L</fullName><default>false</default><label>L</label></value>
            <value><fullName>式</fullName><default>false</default><label>式</label></value>
            <value><fullName>セット</fullName><default>false</default><label>セット</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>